# spec-viewer

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: implementation-plan.md  intro.md
evals/: README.md
evals/estimate/: README.md  cases.yaml
evals/privacy/: README.md
evals/rewrite/: README.md  cases.yaml
evals/workspace/: README.md
examples/: README.md
examples/synthetic-foundation-example/: README.md  (+2 more)
schemas/: README.md  assumption-register.schema.json  change-register.schema.json  clarification-register.schema.json  development-rates-profile.schema.json  development-scenarios.schema.json  document-metadata.schema.json  estimate-assumptions.schema.json  estimate-summary.schema.json  example-classification.schema.json  infrastructure-prices-profile.schema.json  infrastructure-scenarios.schema.json  issue-register.schema.json  project.schema.json  requirement-traceability.schema.json  review-summary.schema.json  run-metadata.schema.json  support-model.schema.json  tool-subscriptions-profile.schema.json  work-breakdown.schema.json
scripts/: check-private-paths.sh  check.sh
standards/: README.md  artifact-versioning.md  canonical-document-format.md  privacy-policy.md  requirement-id-policy.md  workspace-lifecycle.md
tests/: conftest.py  test_repository.py
tools/: README.md
(+99 files in other folders)
