[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-viewer"
version = "0.1.0"
description = "Private, traceable workflows for reviewing, rewriting, and estimating product specifications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema[format]>=4.21,<5",
    "pypdf>=6.0,<7",
    "python-docx>=1.2,<2",
    "PyYAML>=6.0,<7",
    "typer>=0.12,<1",
]

[project.scripts]
spec-viewer = "spec_viewer.cli:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.9,<2",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<8",
    "ruff>=0.4,<1",
    "types-jsonschema>=4.21",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["spec_viewer"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
